--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,22 +1,36 @@
+# Copyright 2020 NephoSolutions SRL, Sebastian Trebitz
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 ---
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v2.2.3
+  rev: v2.5.0
   hooks:
   - id: end-of-file-fixer
   - id: trailing-whitespace
   - id: check-case-conflict
   - id: check-merge-conflict
 - repo: https://github.com/Lucas-C/pre-commit-hooks
-  rev: v1.1.6
+  rev: v1.1.7
   hooks:
   - id: insert-license
-    files: \.tf.*$
+    files: .*\.(tf.*|y[a]?ml)$
     args:
     - --license-filepath
     - .license_header.txt
 - repo: https://github.com/antonbabenko/pre-commit-terraform
-  rev: v1.16.0
+  rev: v1.25.0
   hooks:
     - id: terraform_fmt
     - id: terraform_docs
