Configure Test-Kitchen

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -13,24 +13,27 @@
 # limitations under the License.
 
 ---
-repos:
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v2.5.0
-  hooks:
-  - id: end-of-file-fixer
-  - id: trailing-whitespace
-  - id: check-case-conflict
-  - id: check-merge-conflict
-- repo: https://github.com/Lucas-C/pre-commit-hooks
-  rev: v1.1.7
-  hooks:
-  - id: insert-license
-    files: .*\.(rb|tf.*|y[a]?ml)$
-    args:
-    - --license-filepath
-    - .license_header.txt
-- repo: https://github.com/antonbabenko/pre-commit-terraform
-  rev: v1.25.0
-  hooks:
-    - id: terraform_fmt
-    - id: terraform_docs
+driver:
+  name: terraform
+  variables:
+    display_name: "Test Kitchen"
+    project_id: "<%= ENV['GOOGLE_PROJECT_ID'] %>"
+
+provisioner:
+  name: terraform
+
+verifier:
+  name: terraform
+
+platforms:
+  - name: default
+
+suites:
+  - name: service_account
+    verifier:
+      color: true
+      systems:
+        - name: service_account gcp
+          backend: gcp
+          controls:
+            - gcp
